# propolis

./: CMakeLists.txt  ChangeLog  README  arrange.cpp  arrange.h  berlekamp.cpp  binio.cpp  binio.h  config.h.in  contour.cpp  contour.h  dotbaton.cpp  dotbaton.h  ecc.h  ecctest.cpp  ecctest.h  encoding.cpp  encoding.h  example.cpp  fileio.cpp  fileio.h  fuzzbuzz.cpp  galois.cpp  galois.h  genetic.cpp  genetic.h  hamming.cpp  hamming.h  hexcode.cpp  hexcode.dxf  hexcode.h  hvec.cpp  hvec.h  lagrange.cpp  lagrange.h  letters.cpp  letters.h  letters.txt  manysum.cpp  manysum.h  (+18 more)
cmake/Modules/: FindGMP.cmake  FindGMPXX.cmake
